--- a/reference.bib
+++ b/reference.bib
@@ -1,3 +1,21 @@
+@article{filippopoulos2013exploration,
+  title={Exploration of energy efficient memory organisations for dynamic multimedia applications using system scenarios},
+  author={Filippopoulos, Iason and Catthoor, Francky and Kjeldsberg, Per Gunnar},
+  journal={Design Automation for Embedded Systems},
+  pages={1--24},
+  year={2013},
+  publisher={Springer}
+}
+
+@inproceedings{sharma2013data,
+  title={Data memory optimization in LTE downlink},
+  author={Sharma, Namita and Aa, TV and Agrawal, Prashant and Raghavan, Praveen and Panda, Preeti Ranjan and Catthoor, Francky},
+  booktitle={Acoustics, Speech and Signal Processing (ICASSP), 2013 IEEE International Conference on},
+  pages={2610--2614},
+  year={2013},
+  organization={IEEE}
+}
+
 @article{Gem5,
  author = {Binkert, Nathan and Beckmann, Bradford and Black, Gabriel and Reinhardt, Steven K. and Saidi, Ali and Basu, Arkaprava and Hestness, Joel and Hower, Derek R. and Krishna, Tushar and Sardashti, Somayeh and Sen, Rathijit and Sewell, Korey and Shoaib, Muhammad and Vaish, Nilay and Hill, Mark D. and Wood, David A.},
  title = {The gem5 simulator},
