--- a/LayoutStorageOpt.tex
+++ b/LayoutStorageOpt.tex
@@ -81,6 +81,7 @@ The energy consumption on the memory subsystem is affected by the number of memo
 Again, the memory architecture and the data-to-memory mapping decisions have a great impact on both the number of accesses and the energy per access.
 
 \section{Motivational Example}
+\label{sec:motivational}
 
 A large number of papers have demonstrated the importance of the memory organization to the overall system energy consumption. 
 As shown in \cite{Gonzalez1996} memory contributes around 40\% to the overall power consumption in general purpose systems. 
@@ -121,18 +122,71 @@ As a result only one forth of the array A can be found on the first bank in cont
 \end{figure}
 
 A quick estimation for the difference in the energy consumption between the two approaches can be calculated using a simple energy model for the system.
-The system architecture has an ADD FU that performs operations over 4 words at a time and the memory to processor path has a width of 4 words. 
+We can assume a system architecture with an ADD FU that performs operations over 4 words at a time and a memory to processor path that has a width of 4 words. 
 Each array element is assumed to have the size of one word.
-The register file at the processor can only store 5 words and the iteration variable $i$.
-The first approach 
+The register file at the processor can only store the iteration variable $i$ and 5 words, which are the variables result, A, B, C and D.
+Without interleaving of data the number of memory accesses for each loop iteration is 4, because the elements $A(i)$, $B(i)$, $C(i)$ and $D(i)$ are stored in different memory banks.
+Thus, the energy consumption for reading is 75\% lower when the data are interleaved.
+The performance is also higher as there are 75\% less memory accesses.
+The energy consumption due to memory leakage is also lower, as the access time for the memory and the execution time of the algorithm are shorter.
 
 \section{Related work}
 
+The current work combines and expands the interleaving exploration presented in \cite{sharma2013data} and the data to memory mapping methodology presented in \cite{filippopoulos2013exploration}. Data layout optimizations aim to arrange data in memory with the objective of improving system performance and energy through means such as reduced memory access count or reduced cache misses. Several more generic data layout techniques have been explored by researchers at various levels in the memory hierarchy. But these are not well matched to our context of LTE optimisations. In particular, Cache partitioning [4], a layout technique for arrays, maps each array to different cache partitions to reduce conflicts. Kulkarni et al. [5] addressed the problem for cache miss reduction by evaluating the tiling size for arrays and merging the arrays appropriately for each loop nest. Memory Hierarchy Layer Assignment (MHLA), an optimization methodology for data memory hierarchy [6], determines for each data set an appropriate layer in the hierarchy and type of memory (single/dual port) taking data re-use into account. The strategy in [7] partitions the variables to Scratch Pad Memory and DRAM in a way that interference among different variables is minimized. To the best of our knowledge, no work has been presented yet for an efficient data layout for LTE. And the cache-oriented general techniques proposed earlier by researchers [8] do not find a straightforward application in our context, where the target system hardware consists of a coarse grained re-configurable array (CGRA) of SIMD functional units and vector registers.
 
+The memory allocation problem has been studied before. 
+However, we extend state of the art by proposing a more generic approach, which is also suitable for applications with input driven dynamic behaviour. 
+The authors in \cite{Ben00b} present a methodology to generate a static application-specific memory hierarchy. 
+Later, they extend their work in \cite{Ben00c} to a reconfigurable platform with multiple memory banks. 
+However, our work differentiates by proposing a more generic and application agnostic methodology and employing the use of system scenarios, in order to efficiently handle a wider range of dynamic application characteristics. 
+
+Several techniques for designing energy efficient memory architectures for embedded systems are presented in \cite{Mac02}. 
+The current work differentiates by employing a platform that is reconfigurable at run-time. 
+In \cite{Pgk01} a large number of data and memory optimisation techniques, that could be dependent or independent of a target platform, are discussed. 
+Again, reconfigurable platforms are not considered.
+
+Energy-aware assignment of data to memory banks for several task-sets based on the MediaBench suit of benchmarks is presented in \cite{Mar03}. 
+Low energy multimedia applications are discussed also in \cite{Chu02} with focus on processing rather than the memory platform. 
+Furthermore, both \cite{Mar03} and \cite{Chu02} base their analysis on use case situations and do not incorporate sufficient support for very dynamically behaving application codes. 
+System scenarios alleviate this bottleneck and enable handling of such dynamic behaviour. 
+In addition, the current work explores the assignment of data to the memory and the effect of different assignment decisions on the overall energy consumption.
+
+The authors in \cite{abraham1999automatic}, \cite{jacob1996analytical} and \cite{li1999hardware} present methodologies for designing memory hierarchies.
+Design methods with main focus on the traffic and latencies in the memory architecture are presented in \cite{chen1999loop}, \cite{grun2000mist}, \cite{jantsch1994hardware} and \cite{passes1995multi}.
+Improving memory energy efficiency based on a study of access patterns is discussed in \cite{kandemir2001improving}.
+Application specific memory design is a research topic in \cite{schmit1997synthesis}, while memory design for multimedia applications is presented in \cite{oshima1997high}.
+The current work differentiates by introducing the concept of system scenarios that supports the dynamic handling of application's requirements, although the data mapping is static inside each scenario. 
+
+An overview of work on system scenario methodologies and their application are presented in \cite{Gheorghita2007}. 
+In \cite{Fil12} extensions towards a memory-aware system scenario methodology are presented and demonstrated using theoretical memory models and two target applications. 
+This work is an extension both in complexity and accuracy of the considered memory library and on the number of target applications. 
+
+Furthermore, the majority of the published work focus on control variables for system scenario prediction and selection. 
+Control variables can take a relatively small set of different values and thus can be fully explored. However, the use of data variables \cite{Elena2010} is required by many dynamic systems including the majority of multimedia applications. 
+The range of possible values for data variables is wider and makes full exploration impossible. 
+
+Authors in \cite{Pal06} present a technique to optimise memory accesses for input data dependent applications by duplicating and optimising the code for different execution paths of a control flow graph (CFG). 
+One path or a group of paths in a CFG form a scenario and its memory accesses are optimised using global loop transformations (GLT). 
+Apart from if-statement evaluations that define different execution paths, they extend their technique to include while loops with variable trip count in \cite{Pal06b}. 
+A heuristic to perform efficient grouping of execution paths for scenario creation is analysed in \cite{Pal07}. 
+Our work extends the existing solutions towards exploiting the presence of a distributed memory organisation with reconfiguration possibilities.
+
+Reconfigurable hardware for embedded systems, including the memory architecture, is a topic of active research. 
+An extensive overview of current approaches is found in \cite{Garcia}. 
+The approach presented in this paper differentiates by focusing on the data-to-memory assignment aspects in the presence of a platform with dynamically configurable memory blocks. 
+Moreover, many methods for source code transformations, and especially loop transformations, have been proposed in the memory management context. 
+These methods are fully complementary to our focus on data-to-memory assignment and should be performed prior to our step. 
 
 \section{System Design Exploration Workflow}
 
-The general workflow of this work is presented in Fig.\ref{workflow}.
+The overall flow of this work is presented in Fig.\ref{workflow}. 
+The first step of the methodology is the analysis of the application code. 
+The methodology is applicable to any application.
+However the applications that can benefit from the methodology are the ones with irregular access patterns.
+The second step is the interleaving exploration, which explores all different option for re-arrangement of the data.
+The result of the interleaving is a set of data with a reduced number of holes.
+The next step is the mapping of the interleaved data set to the clustered memory architecture.
+The exploration space consists of different sizes and types of memory banks.
 
 \begin{figure}
 \centering
@@ -145,19 +199,27 @@ The general workflow of this work is presented in Fig.\ref{workflow}.
 
 A representation model for the access pattern is employed in order to formally present each step of the methodology.
 
-\textit{Discussion about polyhedral and enumerative approaches}
 
-\textit{Analysis of A-H model based on Angeliki}
-
-\textit{Definition of algebra functions between access patterns}
+%\textit{Discussion about polyhedral and enumerative approaches}
+%
+%\textit{Analysis of A-H model based on Angeliki}
+%
+%\textit{Definition of algebra functions between access patterns}
 
 \subsection{Data Interleaving Exploration}
-
-\textit{Algorithm for exploring data interleaving}
+Interleaving is a data layout transformation for combining the storage of multiple arrays, so that blocks of data from different arrays are stored contiguously, in order to achieve spatial locality in memory accesses.
+By interleaving we are able to group the data to be accessed and thus reduce the number of memory accesses for loading them.
+%\textit{Algorithm for exploring data interleaving}
 
 \subsection{Data-to-Memory Mapping Exploration}
 
-Given the input from the previous step, we explore the mapping of data-to-memory.
+Given the input from the previous step, we explore the mapping of the interleaved data to the memory architecture.
+A clustered memory organisation with up to five memory banks of varying sizes is explored. 
+The limitation in the number of memory banks is necessary in order to keep the interconnection cost between the processing element (PE) and the memories constant through exploration of different architectures. 
+The decision to use memory banks with varying sizes on the clustered memory organization increases the reconfiguration options and consequently the potential energy gains. 
+In general, smaller memories are more energy efficient compared to larger memories banks. 
+However, in some cases large memory banks are needed in order to fit the application data without the need for too many small memories causing complex interconnects. 
+The goal is to use the most energy efficient banks to store the interleaved data.
 
 \subsection{One way constraint propagation}
 
@@ -168,9 +230,14 @@ We split the decisions in two steps and the interleaving decisions are propagate
 
 \section{Target Architecture}
 
-\textit{Analysis of architecture based on our previous papers}
-
-General architecture is presented in Fig.\ref{arch}.
+%\textit{Analysis of architecture based on our previous papers}
+A generic architecture is presented in Fig.\ref{arch}.
+The methodology explores different interleaving and data to memory mapping options for this reconfigurable architecture.
+The scratchpad memory consists of up to five memory banks. 
+The optimal sizes are found based on the sizes of the data after the interleaving exploration.
+The vector FU is assumed to perform instructions on multiple data.
+The explored data lengths are 4, 8 and 16 words.
+Each word is an array elements in our case. 
 
 \begin{figure}
 \centering
@@ -179,17 +246,34 @@ General architecture is presented in Fig.\ref{arch}.
 	\includegraphics[scale = 0.5]{Images/Architecture.eps} 
 \end{figure}
 
+\subsection{Memory Models}
+
+The dynamic memory organisation is constructed using commercially available SRAM memory models (MM).
+For those models delay and energy numbers are derived from a commercial memory compiler.
+In addition, experimental standard cell-based memories (SCMEM) \cite{Mei11}  are  considered for smaller memories due to their energy and area efficiency for reasonably small storage capacities, as argued in \cite{Mei10}. 
+The standard cell-based memories are synthesized using Cadence RTL compiler for TSMC 40nm standard library. 
+Afterwords, power simulations on the synthesized design are carried out using Synopsys PrimeTime, in order to obtain energy numbers.
+Both MMs and SCMEMs can operate under a wide range of supply voltages, thus support different operating modes that provide an important exploration space.
+
+\subsection{Function Unit Models}
+
+We have used an extension of the DRESC compiler framework [10] for mapping the reference application to a CGRA architecture.
+The CGRA part comprises four SIMD enabled functional units (FUs) and a central vector register file which is also coupled to a VLIW processor with 3 FUs. 
+For efficient utilization of the vector FUs, the register file has a wide interface (256 bit wide) with the scratchpad memory, while the one with VLIW FUs is 32 bit wide. 
+
 \section{Applications}
 
-An example of the channel estimation kernel is presented in Fig. .
+The applications that benefit most from the proposed methodology are characterised by having dynamic irregular access patterns with holes.
+The multimedia domain offers some suitable candidates for the presented methodology.
+The effectiveness is demonstrated and tested using a variety of open multimedia benchmarks, which can be found in the Polybench \cite{Poly}, Mibench \cite{mibench} and Mediabench \cite{mediabench} benchmark suites.
+An overview of the benchmark applications that were tested is presented below:
 
-Suitable applications:
 \begin{itemize}
-\item Channel estimation kernel
-\item SOR benchmark
-\item Motion estimation kernel
-\item PGM-armor
-\item Maybe image processing...
+\item Motivational example is the very simple example presented in Sec.~\ref{sec:motivational}
+\item SOR benchmark 
+\item FFT benchmark has an irregular pattern during the access of the pilot matrices. The interleaving exploration for FFT is presented in \cite{sharma2013data}
+\item Motion estimation benchmark is a dynamic algorithm that results in different access patterns based on the identification of the moving objects. 
+The static parts are not accessed resulting in holes in the accesses and the interleaving aims to minimize those parts.
 \end{itemize}
 
 \section{Results}
@@ -214,6 +298,9 @@ Results are presented for the four cases:
 \item Co-exploration of interleaving and mapping options (gain C, C$ > $A+B )
 \end{itemize}
 
+\section{Conclusion}
+
+Justify why the integrated approach gives better results than just combining the two methods...
 % Bibliography
 \bibliographystyle{ACM-Reference-Format-Journals}
 \bibliography{reference}
