Semi-completed draft
Related work is missing.
Arch, Results need more work.

--- a/reference.bib
+++ b/reference.bib
@@ -1,3 +1,119 @@
+@inproceedings{abraham1999automatic,
+  title={Automatic and efficient evaluation of memory hierarchies for embedded systems},
+  author={Abraham, Santosh G and Mahlke, Scott A},
+  booktitle={Microarchitecture, 1999. MICRO-32. Proceedings. 32nd Annual International Symposium on},
+  pages={114--125},
+  year={1999},
+  organization={IEEE}
+}
+
+@article{jacob1996analytical,
+  title={An analytical model for designing memory hierarchies},
+  author={Jacob, Bruce L and Chen, Peter M and Silverman, Seth R and Mudge, Trevor N},
+  journal={Computers, IEEE Transactions on},
+  volume={45},
+  number={10},
+  pages={1180--1194},
+  year={1996},
+  publisher={IEEE}
+}
+
+@inproceedings{chen1999loop,
+  title={Loop scheduling and partitions for hiding memory latencies},
+  author={Chen, Fei and Sha, Edwin Hsing-Mean},
+  booktitle={Proceedings of the 12th international symposium on System synthesis},
+  pages={64},
+  year={1999},
+  organization={IEEE Computer Society}
+}
+
+@inproceedings{passes1995multi,
+  title={Multi-dimensional interleaving for time-and-memory design optimization},
+  author={Passes, NL and Sha, EH-M and Chao, Liang-Fang},
+  booktitle={Computer Design: VLSI in Computers and Processors, 1995. ICCD'95. Proceedings., 1995 IEEE International Conference on},
+  pages={440--445},
+  year={1995},
+  organization={IEEE}
+}
+
+@article{chen2000synthesis,
+  title={Synthesis of custom interleaved memory systems},
+  author={Chen, Song and Postula, Adam},
+  journal={Very Large Scale Integration (VLSI) Systems, IEEE Transactions on},
+  volume={8},
+  number={1},
+  pages={74--83},
+  year={2000},
+  publisher={IEEE}
+}
+
+@inproceedings{grun2000mist,
+  title={MIST: An algorithm for memory miss traffic management},
+  author={Grun, Peter and Dutt, Nikil and Nicolau, Alex},
+  booktitle={Proceedings of the 2000 IEEE/ACM international conference on Computer-aided design},
+  pages={431--438},
+  year={2000},
+  organization={IEEE Press}
+}
+
+@inproceedings{jantsch1994hardware,
+  title={Hardware/software partitioning and minimizing memory interface traffic},
+  author={Jantsch, Axel and Ellervee, Peeter and Hemani, Ahmed and {\"O}berg, Johnny and Tenhunen, Hannu},
+  booktitle={Proceedings of the conference on European design automation},
+  pages={226--231},
+  year={1994},
+  organization={IEEE Computer Society Press}
+}
+
+@article{li1999hardware,
+  title={Hardware/software co-synthesis with memory hierarchies},
+  author={Li, Yanbing and Wolf, Wayne H},
+  journal={Computer-Aided Design of Integrated Circuits and Systems, IEEE Transactions on},
+  volume={18},
+  number={10},
+  pages={1405--1417},
+  year={1999},
+  publisher={IEEE}
+}
+
+@article{schmit1997synthesis,
+  title={Synthesis of application-specific memory designs},
+  author={Schmit, Herman and Thomas, Donald E},
+  journal={Very Large Scale Integration (VLSI) Systems, IEEE Transactions on},
+  volume={5},
+  number={1},
+  pages={101--111},
+  year={1997},
+  publisher={IEEE}
+}
+
+@article{oshima1997high,
+  title={High-speed memory architectures for multimedia applications},
+  author={Oshima, Yoichi and Sheu, Bing J and Jen, Steve H},
+  journal={Circuits and Devices Magazine, IEEE},
+  volume={13},
+  number={1},
+  pages={8--13},
+  year={1997},
+  publisher={IEEE}
+}
+
+@inproceedings{kandemir2001improving,
+  title={Improving memory energy using access pattern classification},
+  author={Kandemir, Mahmut and Sezer, Ugur and Delaluz, Victor},
+  booktitle={Proceedings of the 2001 IEEE/ACM international conference on Computer-aided design},
+  pages={201--206},
+  year={2001},
+  organization={IEEE Press}
+}
+ 
+ 
+
+
+
+
+
+
 @article{filippopoulos2013exploration,
   title={Exploration of energy efficient memory organisations for dynamic multimedia applications using system scenarios},
   author={Filippopoulos, Iason and Catthoor, Francky and Kjeldsberg, Per Gunnar},
@@ -5,6 +121,13 @@
   pages={1--24},
   year={2013},
   publisher={Springer}
+}
+
+@phdthesis{kritikakou2013phd,
+  title={Development of methodologies for memory management and design space exploration of SW/HW computer architectures for designing embedded systems},
+  author={Kritikakou, Angeliki Stavros},
+  year={2013},
+  school={Department of Electrical and Computer Engineering School of Engineering, University of Patras}
 }
 
 @inproceedings{sharma2013data,
@@ -35,9 +158,7 @@
  address = {New York, NY, USA},
 } 
 
-
-
-@Book{dtse,
+@book{dtse,
 author = {Francky Catthoor and Sven Wuytack and G.E. de Greef and Florin Banica and Lode Nachtergaele and Arnout Vandecappelle},
 title = {Custom Memory Management Methodology: Exploration of Memory Organisation for Embedded Multimedia System Design},
 publisher = {Springer},
@@ -292,17 +413,16 @@ ISSN={0018-9448},}
  keywords = {FPGA, Viterbi coding, dynamic reconfiguration},
 }
 
+
+
+
 @INPROCEEDINGS{Ben99,
-author={Simunic, T. and Benini, L. and De Micheli, G.},
-booktitle={Design Automation Conference, 1999. Proceedings. 36th}, title={Cycle-accurate simulation of energy consumption in embedded systems },
-year={1999},
-month={},
-volume={},
-number={},
-pages={867 -872},
-keywords={DC-DC converter;Dhrystone benchmark;L2 cache;SmartBadge;StrongARM-1100 processor;embedded systems;energy consumption;energy model;instruction-level cycle-accurate simulator;interconnect;real-time MPEG feature;simulation methodology;DC-DC power convertors;circuit CAD;circuit simulation;digital simulation;embedded systems;instruction sets;integrated circuit design;low-power electronics;},
-doi={10.1109/DAC.1999.782199},
-ISSN={},}
+author="Simunic, T. and Benini, L. and De Micheli, G.",
+booktitle="Design Automation Conference, 1999. Proceedings. 36th", title="Cycle-accurate simulation of energy consumption in embedded systems",
+year="1999",
+pages="867 -872",
+doi="10.1109/DAC.1999.782199",
+}
 
 @INPROCEEDINGS{Che09,
 author={Cheung, E. and Hsieh, H. and Balarin, F.},
