--- a/LayoutStorageOpt.tex
+++ b/LayoutStorageOpt.tex
@@ -1,6 +1,7 @@
 %ACM journals format:
 \documentclass[prodmode,acmtodaes]{acmsmall} 
 \usepackage[ruled]{algorithm2e}
+\usepackage{multirow}
 \renewcommand{\algorithmcfname}{ALGORITHM}
 \SetAlFnt{\small}
 \SetAlCapFnt{\small}
@@ -80,6 +81,14 @@ The interleaving exploration can increase the utilization of the processing subs
 The energy consumption on the memory subsystem is affected by the number of memory accesses and the energy per access. 
 Again, the memory architecture and the data-to-memory mapping decisions have a great impact on both the number of accesses and the energy per access.
 
+This article is organized as follows. 
+Section~\ref{sec:motivational} motivates the study of developing a methodology for optimization of the data interleaving exploration and the data-to-memory mapping. 
+Section~\ref{sec:related} surveys related work on both the interleaving and memory mapping exploration.
+Section~\ref{sec:methodology} presents the general work-flow and the sequence of the methodology steps.
+In Section~\ref{sec:platform} the target platform is described accompanied by a detailed description of the employed SIMD architecture and the memory models, while the set of benchmarks and their characteristics are analysed in Section~\ref{sec:applications}. 
+Results of applying the described exploration methodology to the targeted applications are shown in Section~\ref{sec:results}, while conclusions are drawn in Section~\ref{sec:conclusion}. 
+
+
 \section{Motivational Example}
 \label{sec:motivational}
 
@@ -107,7 +116,7 @@ For example, the interleaving of every fourth line within the combined array ($A
 \label{alg:motivation}
 \end{algorithm}
 
-The data-to-memory mapping is presented in Fig.~\ref{motivation}. 
+The data-to-memory mapping is presented in Fig.~\ref{fig:motivation}. 
 The memory architecture consists of four memory banks and the overall memory size is enough to fit the four arrays.
 The conventional approach maps each array in a separate bank.
 If the four arrays are interleaved, the mapping distributes the data through the banks.
@@ -116,8 +125,8 @@ As a result only one forth of the array A can be found on the first bank in cont
 
 \begin{figure}
 \centering
-	\label{motivation}
-	\caption{Data-to-memory mapping for motivational example}
+	\caption{Data-to-memory mapping for motivational example}	
+	\label{fig:motivation}
 	\includegraphics[scale = 0.5]{Images/motivation.eps}
 \end{figure}
 
@@ -131,6 +140,7 @@ The performance is also higher as there are 75\% less memory accesses.
 The energy consumption due to memory leakage is also lower, as the access time for the memory and the execution time of the algorithm are shorter.
 
 \section{Related work}
+\label{sec:related}
 
 The current work combines and expands the interleaving exploration presented in \cite{sharma2013data} and the data to memory mapping methodology presented in \cite{filippopoulos2013exploration}. Data layout optimizations aim to arrange data in memory with the objective of improving system performance and energy through means such as reduced memory access count or reduced cache misses. Several more generic data layout techniques have been explored by researchers at various levels in the memory hierarchy. But these are not well matched to our context of LTE optimisations. In particular, Cache partitioning [4], a layout technique for arrays, maps each array to different cache partitions to reduce conflicts. Kulkarni et al. [5] addressed the problem for cache miss reduction by evaluating the tiling size for arrays and merging the arrays appropriately for each loop nest. Memory Hierarchy Layer Assignment (MHLA), an optimization methodology for data memory hierarchy [6], determines for each data set an appropriate layer in the hierarchy and type of memory (single/dual port) taking data re-use into account. The strategy in [7] partitions the variables to Scratch Pad Memory and DRAM in a way that interference among different variables is minimized. To the best of our knowledge, no work has been presented yet for an efficient data layout for LTE. And the cache-oriented general techniques proposed earlier by researchers [8] do not find a straightforward application in our context, where the target system hardware consists of a coarse grained re-configurable array (CGRA) of SIMD functional units and vector registers.
 
@@ -177,38 +187,79 @@ The approach presented in this paper differentiates by focusing on the data-to-m
 Moreover, many methods for source code transformations, and especially loop transformations, have been proposed in the memory management context. 
 These methods are fully complementary to our focus on data-to-memory assignment and should be performed prior to our step. 
 
-\section{System Design Exploration Workflow}
+\section{System Design Exploration Work-flow}
+\label{sec:methodology}
 
-The overall flow of this work is presented in Fig.\ref{workflow}. 
+The systematic exploration of interleaving options and data to memory mapping possibilities is necessary.
+The exploration space consists of the potential combinations between the different arrays and the different scratch-pad memory architectures, which combine memories of different types and sizes.
+The overall work-flow of this work is presented in Fig.\ref{fig:workflow}. 
 The first step of the methodology is the analysis of the application code. 
 The methodology is applicable to any application.
-However the applications that can benefit from the methodology are the ones with irregular access patterns.
+However the applications that can benefit more from the proposed methodology are the ones with irregular access patterns.
 The second step is the interleaving exploration, which explores all different option for re-arrangement of the data.
 The result of the interleaving is a set of data with a reduced number of holes.
 The next step is the mapping of the interleaved data set to the clustered memory architecture.
-The exploration space consists of different sizes and types of memory banks.
 
 \begin{figure}
 \centering
-	\label{workflow}
 	\caption{Methodology steps}
+	\label{fig:workflow}
 	\includegraphics[scale = 0.5]{Images/Workflow.eps} 
 \end{figure}
 
 \subsection{Formal Model Representation of Access Pattern }
 
-A representation model for the access pattern is employed in order to formally present each step of the methodology.
+\begin{figure}
+\centering
+	\caption{Extraction of access pattern from application code}
+	\label{fig:pattern}
+	\includegraphics[scale = 0.5]{Images/AHpattern.eps} 
+\end{figure}
 
+A representation model for the access pattern is employed in order to formally present each step of the methodology.
+The model presented in \cite{Ang13} is a generic model suitable for irregular iteration spaces on arrays.
+The irregularities are created by the application code access statements in a conditional loop structure.
+
+When an array element is accessed, during the code execution, is represented with an A(Access).
+Otherwise, there is a hole in the access pattern represented with an H(Hole) as shown in Fig.\ref{fig:pattern}.
+The sequence of accesses and holes is usually repeated periodically, because normally the loop conditions are not totally random.
+Thus we can define the frequency of each access pattern.
+The analysis of the application code results in the access patterns and their corresponding frequencies, which is the necessary input for the next step on the work-flow.
 
 %\textit{Discussion about polyhedral and enumerative approaches}
-%
 %\textit{Analysis of A-H model based on Angeliki}
-%
 %\textit{Definition of algebra functions between access patterns}
 
 \subsection{Data Interleaving Exploration}
 Interleaving is a data layout transformation for combining the storage of multiple arrays, so that blocks of data from different arrays are stored contiguously, in order to achieve spatial locality in memory accesses.
-By interleaving we are able to group the data to be accessed and thus reduce the number of memory accesses for loading them.
+By interleaving we are able to group the data to be accessed and thus reduce the number of memory accesses for accessing them.
+
+The employed model of access pattern representation is accompanied with a suitable algebra presented in \cite{kritikakou2013phd}.
+The operations defined help the designer explore different interleaving options.
+The goal of the process is to rearrange the data in a more efficient way that increases the number of consequential accesses.
+A simple example is presented in Fig.\ref{fig:algebra}.
+Arrays $A$ and $B$ are interleaved by interchangeably storing an element of each array in the new array. 
+The access patterns of arrays $A$ and $B$ are combined in a new access pattern, which has two accessed elements placed consequentially.
+The use of access patterns and the theory for calculating the access patterns of different combinations enables an extensive exploration of the possible data interleaving options.
+
+The impact of the data interleaving exploration on the number of memory accesses is significant.
+When the accesses are irregular and the data are organized in index order, each memory access results in a small amount of useful data due to the presence of holes.
+In contrast the re-organization of the data provides a sequence of useful data without many holes between them.
+Thus, a single access to the memory results in a higher number of useful elements.
+The overall number of memory accesses is reduced, as each access has a higher utilization.
+
+This idea is illustrated in Fig.\ref{fig:algebra}.
+The number of memory accesses for each case can be calculated by assuming that each memory access loads four array elements, i.e. the word length for the memory and bus architecture is four elements.
+Each time an element from the array $A$ or $B$ is needed, the memory access returns four elements, from which one is the useful and the other three are not used by the running code.
+On the case of the interleaved array, each memory access returns four elements, from which two are useful and two useless.
+Thus, the number of overall memory access in the second case is reduced in half compared to the first case.
+
+\begin{figure}
+\centering
+	\caption{Example of combination between two arrays and their access patterns}
+	\label{fig:algebra}
+	\includegraphics[scale = 0.5]{Images/Algebra.eps} 
+\end{figure}
 %\textit{Algorithm for exploring data interleaving}
 
 \subsection{Data-to-Memory Mapping Exploration}
@@ -221,6 +272,12 @@ In general, smaller memories are more energy efficient compared to larger memori
 However, in some cases large memory banks are needed in order to fit the application data without the need for too many small memories causing complex interconnects. 
 The goal is to use the most energy efficient banks to store the interleaved data.
 
+The exploration space consists of different sizes and types of memory banks.
+The goal is to make the optimal decision regarding the mapping of the data to the different memory banks.
+The parts of the interleaved data that consist mostly of useful elements are mapped into memory banks with low energy per access.
+The parts of the interleaved data that consist of access holes and rarely accessed elements are optimally mapped into memory banks with energy efficient retention states.
+In both cases the size of  the memory banks should be adequate to fit the stored data but at the same time as small size as possible to avoid area and energy penalties.
+
 \subsection{One way constraint propagation}
 
 The decisions taken on the interleaving step affect the mapping options.
@@ -229,9 +286,10 @@ On the other hand, if the mapping exploration is performed first, the freedom fo
 We split the decisions in two steps and the interleaving decisions are propagated as constraints on the mapping exploration phase. 
 
 \section{Target Architecture}
+\label{sec:platform}
 
 %\textit{Analysis of architecture based on our previous papers}
-A generic architecture is presented in Fig.\ref{arch}.
+A generic architecture is presented in Fig.\ref{fig:arch}.
 The methodology explores different interleaving and data to memory mapping options for this reconfigurable architecture.
 The scratchpad memory consists of up to five memory banks. 
 The optimal sizes are found based on the sizes of the data after the interleaving exploration.
@@ -241,8 +299,8 @@ Each word is an array elements in our case.
 
 \begin{figure}
 \centering
-	\label{arch}
 	\caption{Exploration options and system knobs depending on a general platform architecture}
+	\label{fig:arch}
 	\includegraphics[scale = 0.5]{Images/Architecture.eps} 
 \end{figure}
 
@@ -254,30 +312,61 @@ In addition, experimental standard cell-based memories (SCMEM) \cite{Mei11}  are
 The standard cell-based memories are synthesized using Cadence RTL compiler for TSMC 40nm standard library. 
 Afterwords, power simulations on the synthesized design are carried out using Synopsys PrimeTime, in order to obtain energy numbers.
 Both MMs and SCMEMs can operate under a wide range of supply voltages, thus support different operating modes that provide an important exploration space.
+\begin{itemize}
+\item Active mode: The normal operation mode, in which the memory can be accessed at the maximum supported speed. The supply voltage is 1.1V. 
+The dynamic and leakage power are higher compared to the other modes.
+Only on active mode the data are accessible without time penalties, in contrast to light and deep sleep modes.
+In this work all the memory accesses are performed in active mode. 
+\item Light sleep mode: The supply voltage in this mode is lower than active with values around 0.7V. 
+The access time of the memory is significantly higher than the access time in active mode. 
+Switching to active mode can be performed with a negligible energy penalty and a small time penalty of a few clock cycles (less than 10). 
+Data is retained.  
+\item Deep sleep mode: The supply voltage is set to the lowest possible value that can be used without loss of data. 
+This voltage threshold is expected to be lower for SCMEMs than MM models and can be as low as 0.3V. 
+The number of clock cycles needed for switching to active mode is higher compared to sleep mode, typically in the range of 20 to 50 clock cycles depending on the clock speed. 
+Consequently, the speed of the PE and the real-time constrains of the applications has to be taken into consideration when choosing light or deep sleep mode at a specific time.  
+\item Shut down mode: Power-gating techniques are used to achieve near zero leakage power. 
+Stored data is lost. 
+The switch to active mode requires substantially more energy and time. 
+However, switching unused memories to this mode, providing that their data are not needed in the future, results in substantial energy savings.
+\end{itemize}  
+
+Should I add tables as well?
 
 \subsection{Function Unit Models}
 
 We have used an extension of the DRESC compiler framework [10] for mapping the reference application to a CGRA architecture.
-The CGRA part comprises four SIMD enabled functional units (FUs) and a central vector register file which is also coupled to a VLIW processor with 3 FUs. 
-For efficient utilization of the vector FUs, the register file has a wide interface (256 bit wide) with the scratchpad memory, while the one with VLIW FUs is 32 bit wide. 
+The CGRA part comprises one SIMD enabled functional units (FU) and a central vector register file which is also coupled to a VLIW processor. 
+For efficient utilization of the vector FU, the register file has a wide interface (256 bit wide) with the scratchpad memory and allows testing for word length of 4, 8 and 16 elements, assuming that each array element is a 16 bit wide.  
 
 \section{Applications}
+\label{sec:applications}
 
-The applications that benefit most from the proposed methodology are characterised by having dynamic irregular access patterns with holes.
+The applications that benefit most from the proposed methodology are characterised by having irregular access patterns with holes.
 The multimedia domain offers some suitable candidates for the presented methodology.
-The effectiveness is demonstrated and tested using a variety of open multimedia benchmarks, which can be found in the Polybench \cite{Poly}, Mibench \cite{mibench} and Mediabench \cite{mediabench} benchmark suites.
-An overview of the benchmark applications that were tested is presented below:
+An overview of the tested benchmark applications is presented below:
 
-\begin{itemize}
-\item Motivational example is the very simple example presented in Sec.~\ref{sec:motivational}
-\item SOR benchmark 
-\item FFT benchmark has an irregular pattern during the access of the pilot matrices. The interleaving exploration for FFT is presented in \cite{sharma2013data}
+\begin{enumerate}
+\item Motivational example is the very simple example presented in Sec.~\ref{sec:motivational}. 
+It uses four arrays that all have the same irregular access pattern, namely 1A-3H.
+One element from each array is used to calculate an intermediate result on every loop iteration.
+The interleaving is easy because the four arrays has the same pattern.
+Further interleaving within the array can result into even longer sequences of useful elements.
+The access pattern is repeated for every four elements (1A-3H), so the scaling for the different word lengths (4, 8 and 16) is expected to be good. 
+\item SOR benchmark has a more irregular access pattern.
+The interleaving exploration provides sequences of 3 or 6 sequential useful elements.
+Thus, the utilization on the SIMD architecture is expected to be lower.
+\item FFT benchmark has an irregular pattern during the access of the pilot matrices. 
+The interleaving exploration for FFT is presented in \cite{sharma2013data}.
+The number of matrices is higher and more interleaving options are present.
+However, the interleaving cannot provide an acceptable solution for 16 sequential useful elements.
 \item Motion estimation benchmark is a dynamic algorithm that results in different access patterns based on the identification of the moving objects. 
 The static parts are not accessed resulting in holes in the accesses and the interleaving aims to minimize those parts.
-\end{itemize}
+The interleaving exploration provides possibilities for all tested word lengths. 
+\end{enumerate}
 
 \section{Results}
-
+\label{sec:results}
 
 \begin{table}%
 \tbl{Normalized energy consumption\label{tab:results}}{
@@ -288,17 +377,18 @@ The static parts are not accessed resulting in holes in the accesses and the int
 \end{tabular}}
 \end{table}
 
-
-The design exploration is applied to the chosen application benchmark and energy numbers are derived based on the described target platform.
-Results are presented for the four cases:
+The design exploration is applied to the chosen application benchmarks and energy numbers are derived based on the described target platform.
+The energy numbers are calculated both for the memory and the SIMD architecture presented in Sec.\ref{sec:platform}.
+The following approaches are explored:
 \begin{itemize}
-\item No optimization
+\item No optimization: In this case the 
 \item Interleaving exploration with a static memory platform (gain A)
 \item Data mapping exploration on a reconfigurable platform without optimized interleaving (gain B)
 \item Co-exploration of interleaving and mapping options (gain C, C$ > $A+B )
 \end{itemize}
 
 \section{Conclusion}
+\label{sec:conclusion}
 
 Justify why the integrated approach gives better results than just combining the two methods...
 % Bibliography
